Fix pager on mobile

--- a/scss/_pager.scss
+++ b/scss/_pager.scss
@@ -26,17 +26,24 @@
     width: 100%;
     // min-width: 75%;
     display: flex;
+    height: 36px;
+    max-width: calc(50vw - 10px);
+
+    .caption {
+      overflow-x: hidden;
+    }
   }
 
-  .btn.left {
+  .btn.left .caption {
     justify-content: flex-start;
   }
 
-  .btn.right {
+  .btn.right .caption {
     justify-content: flex-end;
   }
 
   span.svg-icon {
     margin-top: 1px;
+    flex: 0 0 20px;
   }
 }
